internal/deployer/manifests/yaml/sched/controller/networkpolicy.apiserver.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: topology-aware-controller-egress-to-api-server
spec:
  podSelector:
    matchLabels:
      app: topology-aware-controller
  egress:
  - ports:
    - protocol: TCP
      port: 6443 
  policyTypes:
  - Egress
